<resources>
    <string name="app_name">니차내차</string>

    <string name="my_near">내 주변</string>
    <string name="chatting">채팅</string>
    <string name="my_page">마이페이지</string>

    <string name="car_detail_page">차 상세 페이지</string>
    <string name="car_owner_profile">차주 프로필</string>
    <string name="reservation">예약하기</string>
    <string name="correction">수정하기</string>
    <string name="extension_and_return">연장/반납하기</string>
    <string name="report_it">신고하기</string>
    <string name="manners_temperature">매너 온도</string>
    <string name="chat_going">채팅하기</string>
    <string name="car_detail_comment_label">코멘트</string>
    <string name="car_detail_car_owner_label">차주 정보</string>
    <string name="registered_vehicle">등록한 차량</string>
    <string name="car_detail_info_label">세부 정보</string>
    <string name="car_detail_no_license">면허를 먼저 등록해주세요.</string>

    <string name="no_information">정보 없음</string>

    <string name="car_edit_label">내 차 수정하기</string>
    <string name="car_edit_done_button">수정 완료하기</string>
    <string name="car_edit_price_label">일일 대여료</string>
    <string name="car_edit_day_able">예약 가능 여부</string>
    <string name="car_edit_day_label">대여 가능 날짜</string>
    <string name="car_edit_location_label">대여/반납 위치</string>
    <string name="car_edit_rent_unavailable">대여 불가능</string>
    <string name="car_edit_comment_helper_message">차 상세 페이지에 올릴 내용을 작성해 주세요</string>
    <string name="car_edit_max_image">이미지는 최대 10장까지 선택할 수 있습니다.</string>
    <string name="car_edit_finish_update">수정이 완료되었습니다.</string>
    <string name="car_edit_images_count">%d/10</string>
    <string name="car_edit_price_format">원</string>
    <string name="car_edit_rent_available_day_format">%s ~ %s</string>

    <string name="car_edit_wait_loading_text">변경사항을 업로드 중입니다.\n잠시만 기다려 주세요..</string>

    <string name="car_edit_map_location_select_label">등록된 차량을\n주차할 장소를 선택해주세요</string>
    <string name="car_edit_map_location_select_button">위치 선택하기</string>
    <string name="car_edit_map_location_check_message">선택한 위치가 이 위치가 맞나요?\n선택한 곳의 장소명을 확인해주세요</string>
    <string name="car_edit_map_re_select_button">위치 다시 선택</string>
    <string name="car_edit_map_location_done">위치 확정</string>
    <string name="car_edit_map_location_fail_text">직접 입력해 주세요</string>
    
    <string name="notification_list_page">알림 목록</string>
    <string name="notification_list_request_title">예약 요청이 왔습니다.</string>
    <string name="notification_list_request_message">%s님이 %s 차를 원해요!</string>
    <string name="notification_list_accept_title">예약이 수락되었습니다.</string>
    <string name="notification_list_accept_message">%s님이 %s 차 대여를 허락했어요!</string>
    <string name="notification_list_reject_title">예약이 거절되었습니다.</string>
    <string name="notification_list_reject_message">%s님이 %s 차를 사정이 생겨 줄 수 없대요!</string>
    <string name="notification_list_return_title">차량이 반납되었습니다.</string>
    <string name="notification_list_return_message">%s님이 %s 차를 돌려줬어요!</string>
    
    <string name="car_detail_day_price">일일 대여료 %,d원</string>
    <string name="car_detail_location">위치 : %s</string>
    <string name="temperature_type">%.1f℃</string>
    <string name="car_detail_year">%d년식</string>
    <string name="car_detail_licensePlate">번호판 : %s</string>

    <string name="notification_list_no_list">해당 내용이 없습니다.</string>

    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="filter_car_type">차종</string>
    <string name="filter_day">날짜</string>
    <string name="filter_cost">가격</string>

    <string name="reservation_time">대여 시간</string>
    <string name="payment_info">결제 정보</string>
    <string name="total_payment">최종 결제 금액</string>
    <string name="total_time">총 %d일</string>
    <string name="reservation_fee">대여 요금</string>
    <string name="price_format">%,2d 원</string>
    <string name="more">더보기</string>
    <string name="insurance_fee">보험료</string>
    <string name="insurance_option_1">자차 면책 보험료 5만원 (+6,310)</string>
    <string name="insurance_option_2">자차 면책 보험료 30만원 (+5,210)</string>
    <string name="insurance_option_3">자차 면책 보험료 70만원 (+3,870)</string>
    <string name="action_pay">결제하기</string>
    <string name="placeholder_date_count">총 -일</string>
    <string name="placeholder_date_range">시작일 ~ 종료일</string>
    <string name="payment_option">결제 수단</string>
    <string name="payment_option_1">카드 결제</string>
    <string name="payment_option_2">휴대폰 결제</string>제
    <string name="paying_wait_loading_text">결제 중입니다.\n잠시만 기다려 주세요..</string>
    <string name="invalid_date_in_selection">이미 예약된 날짜입니다. 다시 선택해주세요.</string>

    <string name="license_guide_toolbar">운전자 등록</string>
    <string name="license_guide_title">운전면허를 등록해주세요</string>
    <string name="license_guide_subtitle">이렇게 찍어주세요!</string>
    <string name="license_guide_info1">카메라 영역에 꽉 차게 찍어주세요.</string>
    <string name="license_guide_info2">카메라 초점을 잘 맞춰주세요.</string>
    <string name="license_guide_info3">빛반사 없이 찍어주세요.</string>
    <string name="license_guide_camera_button">카메라</string>

    <string name="license_registration_toolbar">운전면허 확인</string>
    <string name="license_registration_id">면허 번호</string>
    <string name="license_registration_resident">주민등록번호</string>
    <string name="license_registration_resident_back">%1$c******</string>
    <string name="license_registration_aptitude">적성검사</string>
    <string name="license_registration_expiration">만료일</string>
    <string name="license_registration_button">등록하기</string>
    <string name="license_registration_error_expired">만료된 면허증 입니다.</string>
    <string name="license_registration_error_firestore">면허증 등록을 실패했습니다. 다시 시도해주세요.</string>
    <string name="license_registration_apply_success">면허증 등록을 완료했어요!</string>
    <string name="license_error_firestore">면허증 정보를 불러오는데 실패했습니다.</string>

    <string name="pink_slip_guide_toolbar">자동차 등록</string>
    <string name="pink_slip_guide_title">자동차 등록증을 등록해주세요</string>

    <string name="pink_slip_registration_toolbar">자동차 등록증 확인</string>
    <string name="pink_slip_registration_id">자동차 등록번호</string>
    <string name="pink_slip_registration_owner">소유주</string>
    <string name="pink_slip_registration_information_number">차대번호</string>
    <string name="pink_slip_registration_type">차종</string>
    <string name="pink_slip_registration_model">모델명</string>
    <string name="pink_slip_registration_year">모델연도</string>
    <string name="pink_slip_error_duplicate">이미 등록된 자동차 입니다.</string>
    <string name="pink_slip_error_firestore">자동차 등록을 실패했습니다. 다시 시도해주세요.</string>
    <string name="pink_slip_apply_success">자동차 등록을 완료했어요!</string>

    <string name="mypage_nickname">%1s 님</string>
    <string name="mypage_title_account">계정 관리</string>
    <string name="mypage_btn_license">운전면허정보</string>
    <string name="mypage_title_payment">결제 관리</string>
    <string name="mypage_btn_payment">결제 수단</string>
    <string name="mypage_title_transaction">거래 관리</string>
    <string name="mypage_btn_car">내 차 등록 / 관리</string>
    <string name="mypage_btn_transaction_buy">니차 거래 내역</string>
    <string name="mypage_btn_transaction_sell">내차 거래 내역</string>
    <string name="mypage_btn_fine">딱지 청구</string>
    <string name="mypage_title_other">기타</string>
    <string name="mypage_btn_terms">이용 약관</string>
    <string name="mypage_btn_sign_out">로그아웃</string>
    <string name="mypage_error_firestore">썸네일 변경에 실패했습니다. 다시 시도해주세요.</string>

    <string name="mypage_carlist">내 차 목록</string>

    <string name="nickname_toolbar">닉네임 변경</string>
    <string name="nickname_input_text">닉네임</string>
    <string name="nickname_condition">한글, 영어, 숫자만 사용 가능해요 (2~10자)</string>
    <string name="nickname_error_min_length">닉네임은 2자 이상 입력해주세요</string>
    <string name="nickname_error_symbols">한글, 영어, 숫자만 입력해주세요</string>
    <string name="nickname_btn_apply">적용하기</string>
    <string name="nickname_error_firestore">닉네임 변경에 실패했습니다. 다시 시도해주세요.</string>

    <string name="review_toolbar">리뷰 남기기</string>
    <string name="review_nickname_for_lender">%1s님의</string>
    <string name="review_nickname_for_owner">%1s님이 대여한</string>
    <string name="review_input_label">솔직한 리뷰를 남겨주세요!</string>
    <string name="review_input_hint_for_lender">차주의 매너, 차 상태 등 서비스에 대한 리뷰를 남겨주세요. 감사 인사도 좋아요 :)</string>
    <string name="review_input_hint_for_owner">대여자의 매너, 대여 후 차 상태 등 리뷰를 남겨주세요. 감사 인사도 좋아요 :)</string>
    <string name="review_btn_apply">리뷰완료</string>
    <string name="review_error_firestore_load_reservation">예약 정보를 불러오는데 실패했습니다.\n이전 화면으로 이동합니다.</string>
    <string name="review_error_firestore_review_duplicated">이미 리뷰를 등록한 거래입니다.\n이전 화면으로 이동합니다.</string>
    <string name="review_error_firestore_review_apply">리뷰 등록에 실패했습니다. 다시 시도해주세요.</string>
    <string name="review_apply_success">리뷰 작성을 완료했어요!</string>

    <string name="default_notification_channel_id">ucmc_notifications</string>
    <string name="default_notification_name">자동차 예약, 반납 알림</string>
    <string name="reservation_request_msg">자동차 대여 예약 요청이 도착했습니다.</string>

    <string name="terms_cancel">거부</string>
    <string name="terms_accept">동의</string>
    <string name="terms_title_service">서비스 이용약관</string>
    <string name="terms_title_privacy">개인정보 이용약관</string>

    <string name="chatting_toolbar">채팅</string>
    <string name="mypage_re_register">다시 등록하기</string>
    <string name="mypage_no_license">등록된 면허가 없습니다.</string>

    <string name="reservation_request_decline">거절하기</string>
    <string name="reservation_request_accept">수락하기</string>
    <string name="notification_toolbar">알림 목록</string>
    <string name="reservation_request_toolbar">예약 요청 확인</string>
    <string name="reservation_profile_title">상대방 정보</string>

    <string name="chatting_provider_name">ucmc</string>
    <string name="permission_post_notification_denied">이 일을 기억할 것입니다.</string>

    <string name="report_success">신고가 접수됐습니다.</string>
    <string name="report_cooldown">%1d초만 참아주세요..!</string>
    <string name="report_fail">다시 시도해주세요.</string>

    <string name="return_car">반납하기</string>
    <string name="return_car_msg">차주님과 사전 합의된 장소에 반납해주세요.\n위반시 추가 요금이 발생합니다.</string>
    <string name="return_car_title">반납까지 %s 남았습니다.\n차량을 반납할까요?</string>
    <string name="hour_format">%d시간</string>
    <string name="day_hour_format">%d일 %d시간</string>
    <string name="minute_format">%d분</string>
    <string name="return_car_complete_msg">반납이 완료되었습니다.</string>

    <string name="no_transactions">거래 내역이 존재하지 않습니다.</string>
    <string name="cancel">취소</string>
    <string name="pending">보류중</string>
    <string name="accept">허락</string>
    <string name="renting">대여중</string>
    <string name="return_completed">반납 완료</string>
    <string name="trading">거래중</string>
    <string name="transaction_completed">거래 완료</string>

    <string name="exception_not_found">알 수 없는 오류가 발생헀어요.</string>
    <string name="exception_user_not_found">사용자 정보를 찾을 수 없어요.</string>
    <string name="exception_delete_fail">데이터를 삭제하는 데 실패했어요.</string>
    <string name="exception_car_list_fail">차 목록을 불러오는 데 실패했어요.</string>
    <string name="exception_load_data">데이터를 불러오는 데 실패했어요.</string>
    <string name="exception_delete_image_part">일부 사진이 삭제가 실패하였습니다.</string>
    <string name="exception_upload_image_part">일부 사진이 업로드가 실패하였습니다.</string>
    <string name="exception_upload_data">업로드가 실패하였습니다.</string>
    <string name="exception_login">로그인에 실패했습니다. 다시 시도해주세요.</string>
</resources>
