<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.gta.presentation.ui.map.MapFragment"
        android:label="@string/my_near"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/chattingFragment"
        android:name="com.gta.presentation.ui.chatting.ChattingFragment"
        android:label="@string/chatting"
        tools:layout="@layout/fragment_chatting" />

    <fragment
        android:id="@+id/myPageFragment"
        android:name="com.gta.presentation.ui.mypage.MyPageFragment"
        android:label="@string/my_page"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/reservationFragment"
        android:name="com.gta.presentation.ui.reservation.ReservationFragment"
        android:label="@string/reservation"
        tools:layout="@layout/fragment_reservation" >
        <argument
            android:name="carInfo"
            app:argType="com.gta.presentation.ui.reservation.TmpCarInfo" />
    </fragment>

</navigation>