<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.map.MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Toolbar.Primary">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableTint="?attr/colorOnPrimary"/>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.naver.maps.map.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/abl_appbar">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type"
                android:text="@string/filter_car_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.UCMC.ChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_day"
                android:text="@string/filter_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.UCMC.ChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cost"
                android:text="@string/filter_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.UCMC.ChipStyle"/>

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>