<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.reservation.reservationFragment">

    <data>

        <import type="com.gta.presentation.model.DateType" />

        <variable
            name="vm"
            type="com.gta.presentation.ui.reservation.ReservationViewModel" />


        <variable
            name="carInfo"
            type="com.gta.presentation.ui.reservation.TmpCarInfo" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_reservation_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/padding_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_reservation_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/padding_medium" />

            <ImageView
                android:id="@+id/iv_reservation_car_thumbnail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/neutral90"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reservation_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@{carInfo.title}"
                android:textAppearance="@style/Body"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/iv_reservation_car_thumbnail"
                tools:text="제네시스 GV80" />

            <TextView
                android:id="@+id/tv_reservation_title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/reservation_time"
                android:textAppearance="@style/Title"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_car_name" />

            <TextView
                android:id="@+id/tv_reservation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:textAppearance="@style/Body"
                app:date_type="@{DateType.RANGE}"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_title_time"
                app:selection="@{vm.selectedDateRange}"
                tools:text="22/11/01 ~ 22/11/02" />

            <TextView
                android:id="@+id/tv_reservation_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_small"
                android:textAppearance="@style/Body"
                app:date_type="@{DateType.DAY_COUNT}"
                app:layout_constraintEnd_toStartOf="@id/iv_reservation_next"
                app:layout_constraintTop_toTopOf="@id/tv_reservation_time"
                app:selection="@{vm.selectedDateRange}"
                tools:text="총 1일" />

            <ImageView
                android:id="@+id/iv_reservation_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_all_arrow_right"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintTop_toTopOf="@id/tv_reservation_time" />

            <View
                android:id="@+id/view_reservation_divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/neutral90"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_time" />

            <TextView
                android:id="@+id/tv_reservation_title_payment_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/payment_info"
                android:textAppearance="@style/Title"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/view_reservation_divider" />

            <TextView
                android:id="@+id/tv_reservation_title_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/reservation_fee"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_title_payment_info" />

            <TextView
                android:id="@+id/tv_reservation_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/price_format(carInfo.price)}"
                android:textAppearance="@style/Body"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintTop_toTopOf="@id/tv_reservation_title_fee"
                tools:text="88,860 원" />

            <View
                android:id="@+id/view_reservation_sub_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/padding_medium"
                android:background="@color/neutral90"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_fee" />

            <TextView
                android:id="@+id/tv_reservation_title_insurance_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/insurance_fee"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/view_reservation_sub_divider" />

            <TextView
                android:id="@+id/tv_reservation_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/neutral"
                android:textSize="@dimen/font_label_large"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintTop_toTopOf="@id/tv_reservation_title_insurance_fee" />

            <RadioGroup
                android:id="@+id/rg_reservation_insurance_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:checkedButton="@{vm.selectedInsuranceOption.first}"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_title_insurance_fee">

                <RadioButton
                    android:id="@+id/rg_reservation_insurance_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurance_option_1" />

                <RadioButton
                    android:id="@+id/rg_reservation_insurance_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurance_option_2" />

                <RadioButton
                    android:id="@+id/rg_reservation_insurance_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurance_option_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_reservation_title_total_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/total_payment"
                android:textColor="@color/neutral"
                android:textSize="@dimen/font_title_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btn_reservation_paying"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/rg_reservation_insurance_options" />

            <TextView
                android:id="@+id/tv_reservation_total_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/price_format(vm.selectedInsuranceOption.second)}"
                android:textAppearance="@style/Title"
                android:textColor="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="@id/tv_reservation_title_total_payment"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintTop_toTopOf="@id/tv_reservation_title_total_payment"
                tools:text="114,430 원" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reservation_paying"
                style="@style/Theme.UCMC.BottomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/action_pay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_reservation_end"
                app:layout_constraintStart_toStartOf="@id/gl_reservation_start"
                app:layout_constraintTop_toBottomOf="@id/tv_reservation_title_total_payment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>