<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_camera_guide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_headline_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/iv_camera_guide_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/license_guide_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_camera_guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_camera_guide_sample"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/tv_camera_guide_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_camera_guide_title"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/img_driving_license" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera_guide_picture"
            style="@style/Theme.UCMC.BottomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/license_guide_camera_button"
            app:icon="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_camera_guide_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_guide_subtitle"
            android:textColor="@color/black"
            android:textSize="@dimen/font_headline_small"
            android:textStyle="bold"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toBottomOf="@id/iv_camera_guide_sample"
            app:layout_constraintBottom_toTopOf="@id/iv_camera_guide_info1"/>

        <ImageView
            android:id="@+id/iv_camera_guide_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_camera_guide_subtitle"
            app:layout_constraintBottom_toTopOf="@id/iv_camera_guide_info2"
            app:srcCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/tv_camera_guide_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/license_guide_info1"
            android:textColor="@color/black"
            android:textSize="@dimen/font_body_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_camera_guide_info1"
            app:layout_constraintStart_toEndOf="@+id/iv_camera_guide_info1"
            app:layout_constraintTop_toTopOf="@+id/iv_camera_guide_info1" />

        <ImageView
            android:id="@+id/iv_camera_guide_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_camera_guide_info1"
            app:layout_constraintBottom_toTopOf="@id/iv_camera_guide_info3"
            app:srcCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/tv_camera_guide_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/license_guide_info2"
            android:textColor="@color/black"
            android:textSize="@dimen/font_body_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_camera_guide_info2"
            app:layout_constraintStart_toEndOf="@+id/iv_camera_guide_info2"
            app:layout_constraintTop_toTopOf="@+id/iv_camera_guide_info2" />

        <ImageView
            android:id="@+id/iv_camera_guide_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintBottom_toTopOf="@+id/btn_camera_guide_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_camera_guide_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_camera_guide_info2"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/tv_camera_guide_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/license_guide_info3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_body_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_camera_guide_info3"
            app:layout_constraintStart_toEndOf="@+id/iv_camera_guide_info3"
            app:layout_constraintTop_toTopOf="@+id/iv_camera_guide_info3"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
